--- a/style.css
+++ b/style.css
@@ -98,19 +98,19 @@ nav button:nth-child(2) {
 
 .email-input input {
     width: 400px;
-    background-color: #333;
-    opacity: 0.8;
+    background-color: #222;
     border: 1px solid #555;
     border-radius: 4px;
     box-sizing: border-box;
-
+    font-size: 16px;
     padding: 20px;
+    opacity: 0.7;
 
 }
 
 .email-input input::placeholder {
     color: #ededed;
-    font-size: 1.4em;
+    /* font-size: 1em; */
 }
 
 .email-input button {
