--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 60vw;
+    max-width: 61vw;
     margin: auto;
     position: relative;
     z-index: 12;
@@ -73,7 +73,7 @@ nav button:nth-child(2) {
     position: relative;
     top: -15px;
     z-index: 10;
-
+    
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 50px;
 }
@@ -89,6 +89,12 @@ nav button:nth-child(2) {
 
 .hero #second-div {
     font-size: 1.25em;
+}
+
+.email-input {
+    margin-top: 10px;
+    display: flex;
+    gap: 4px;
 }
 
 .email-input input,
@@ -109,7 +115,6 @@ nav button:nth-child(2) {
 
 .email-input input::placeholder {
     color: #ededed;
-    /* font-size: 1em; */
 }
 
 .email-input button {
