--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ nav button:nth-child(2) {
 #questions div {
     height: 50px;
     width: 60vw;
-    background-color: #333;
+    background-color: #2d2d2d;
     margin-top: 10px ;
     padding: 18px;
     padding-left: 25px;
