--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ nav button:nth-child(2) {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.2s linear;
     
 }
 
